hero rigiht logo overlapping position fixed!!

--- a/index.css
+++ b/index.css
@@ -321,6 +321,7 @@ header .btn {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  /* position: relative !important; */
   /* align-items: center; */
 }
 
@@ -385,7 +386,7 @@ header .btn {
   align-items: center;
   padding: 0.5rem 1.25rem 0.5rem 3.75rem;
   margin-top: clamp(35px, 1vh, 3.125rem);
-  /* position: absolute; */
+  position: relative !important;
   right: 3%;
 }
 
